--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           ><i class="icon-mail-alt" style="color: #199cdb"></i>CHỨNG CHỈ</a
         >
       </div>
-      <div class="nav-item" style="border-right: 1px solid #ddd">
+      <div class="nav-item" id="projict">
         <a href="#projects" style="text-decoration: none; color: black"
           ><i class="icon-star-1" style="color: #199cdb"></i>DỰ ÁN</a
         >
