--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="./css/font.css" />
 
     <link rel="stylesheet" href="css/laptop.css" />
@@ -353,45 +360,48 @@
     <!-- #endregion -->
 
     <!-- #region certificates -->
-    <div class="container">
-      <div class="certificates" id="certificates">
-        <p id="certificates-title">Chứng chỉ - Giải thưởng</p>
-        <div class="row1">
-          <div class="cert" id="cert1">
-            <img src="images/Cert_DBI.png" />
-            <div class="cert-info">
-              <p class="cert-title">CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</p>
-              <ul>
-                <li>- Chứng chỉ thuộc chương trình CCDN</li>
-                <li>- GPA: 8.6</li>
-              </ul>
+    <section class="cert-section">
+      <div class="container">
+        <div class="certificates" id="certificates">
+          <p id="certificates-title">Chứng chỉ - Giải thưởng</p>
+          <div class="row1">
+            <div class="cert" id="cert1">
+              <img src="images/Cert_DBI.png" />
+              <div class="cert-info">
+                <p class="cert-title">CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</p>
+                <ul>
+                  <li>- Chứng chỉ thuộc chương trình CCDN</li>
+                  <li>- GPA: 8.6</li>
+                </ul>
+              </div>
+            </div>
+            <div class="cert">
+              <img src="images/Cert_PRF.png" />
+              <div class="cert-info">
+                <p class="cert-title">CHỨNG CHỈ LẬP TRÌNH JAVASCRIPT - FUNIX</p>
+                <ul>
+                  <li>- Chứng chỉ thuộc chương trình CCDN</li>
+                  <li>- GPA: 8.9</li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="cert">
-            <img src="images/Cert_PRF.png" />
-            <div class="cert-info">
-              <p class="cert-title">CHỨNG CHỈ LẬP TRÌNH JAVASCRIPT - FUNIX</p>
-              <ul>
-                <li>- Chứng chỉ thuộc chương trình CCDN</li>
-                <li>- GPA: 8.9</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row2">
-          <div class="cert">
-            <img src="images/Cert_WEB.png" />
-            <div class="cert-info">
-              <p class="cert-title">CHỨNG CHỈ THIẾT KẾ DATABASE - FUNIX</p>
-              <ul>
-                <li>- Chứng chỉ thuộc chương trình CCDN</li>
-                <li>- GPA: 8.0</li>
-              </ul>
+          <div class="row2">
+            <div class="cert">
+              <img src="images/Cert_WEB.png" />
+              <div class="cert-info">
+                <p class="cert-title">CHỨNG CHỈ THIẾT KẾ DATABASE - FUNIX</p>
+                <ul>
+                  <li>- Chứng chỉ thuộc chương trình CCDN</li>
+                  <li>- GPA: 8.0</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
     <!-- #endregion -->
 
     <!-- #region projects -->
@@ -401,7 +411,7 @@
         <div class="box1">
           <img src="images/project_1.png" />
           <div class="table-title">CV CÁ NHÂN</div>
-          <table class="cv-table">
+          <table class="table">
             <tr class="cv-header">
               <td class="year">
                 <div class="year-box">2021</div>
@@ -432,7 +442,7 @@
         <div class="box1">
           <img src="images/project_2.png" />
           <div class="table-title">TRANG WEB QUẢN LÝ THÚ CƯNG</div>
-          <table class="cv-table">
+          <table class="table">
             <tr class="cv-header">
               <td class="year">
                 <div class="year-box">2021</div>
@@ -464,7 +474,7 @@
         <div class="box1">
           <img src="images/project_3.png" />
           <div class="table-title">TRANG WEB XEM TIN TỨC</div>
-          <table class="cv-table">
+          <table class="table">
             <tr class="cv-header">
               <td class="year">
                 <div class="year-box">2021</div>
